# deskapptest

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
apps/: base.py
deskapptest/: config.toml
deskapptest/apps/: base.py  windows.py
deskapptest/util/: __init__.py
deskapptest/utils/: conf.py  fs.py  proc.py  wait.py
util/: conf.py  fs.py  types.py
