[build-system]
  requires=["setuptools >= 61.0"]
  build-backend = "setuptools.build_meta"
[project]
  name="deskapptest"
  description="Wrapper for the stack of frameworks - pywinauto + airtest + pyautogui to test Windows apps"
  requires-python=">=3.9"
  dependencies=["airtest==1.3.3", "pywinauto==0.6.3", "PyAutoGUI==0.9.54", "toml==0.10.2"]
  version="1.0.0"
  authors=[{name = "Oleksii K"}]